--- a/_config.yml
+++ b/_config.yml
@@ -1,8 +1,8 @@
-title: Just the Docs Template
-description: A starter template for a Jeykll site using the Just the Docs theme!
+title: 三木资料集
+description: 三木日常整理的一些杂乱资料！
 theme: just-the-docs
 
-url: https://just-the-docs.github.io
+url: https://doc.529300529.xyz
 
 aux_links:
   Template Repository: https://github.com/just-the-docs/just-the-docs-template
