--- a/_config.yml
+++ b/_config.yml
@@ -4,5 +4,5 @@ theme: just-the-docs
 
 url: https://doc.529300529.xyz
 
-aux_links:
-  Template Repository: https://github.com/just-the-docs/just-the-docs-template
+#aux_links:
+#  Template Repository: https://github.com/just-the-docs/just-the-docs-template
